Finished pyelasticsearch install